<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/AboutTheme"
    android:id="@+id/root"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEE">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:background="#FFF">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingStart="@dimen/horizontal_margins"
            android:paddingEnd="@dimen/horizontal_margins"
            android:text="@string/about_about_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <TextView
            android:text="@string/app_name"
            android:textAppearance="?attr/textAppearanceListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/horizontal_margins"
            android:paddingEnd="@dimen/horizontal_margins"
            android:paddingTop="16dp" />
        <TextView
            android:id="@+id/app_version"
            android:text="v1.0"
            android:textAppearance="?attr/textAppearanceListItemSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/horizontal_margins"
            android:paddingEnd="@dimen/horizontal_margins"
            android:paddingBottom="16dp" />

        <TextView
            android:text="@string/about_website_item"
            android:textAppearance="?attr/textAppearanceListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/horizontal_margins"
            android:paddingEnd="@dimen/horizontal_margins"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:id="@+id/website" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:elevation="2dp"
        android:background="#FFF">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingTop="16dp"
            android:paddingStart="@dimen/horizontal_margins"
            android:paddingEnd="@dimen/horizontal_margins"

            android:text="@string/about_contact_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
        <TextView
            android:text="@string/about_feedback_item"
            android:textAppearance="?attr/textAppearanceListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="@dimen/horizontal_margins"
            android:paddingEnd="@dimen/horizontal_margins"

            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:id="@+id/send_feedback" />

    </LinearLayout>

</LinearLayout>